# router/media.go
@@ -19,6 +19,8 @@ import (
 
 func NewMediaRouter(group *gin.RouterGroup) {
 	group.POST("/image", UploadImage)
+	group.POST("/video", UploadVideo)
+	group.GET("/:short", GetMedia)
 }
 
 type UploadImageInfo struct {
@@ -104,7 +106,128 @@ func UploadImage(g *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
 	defer cancel()
 
-	data, err := media.MediaService.CreateMedia(ctx, objectId, "image", info.ExpirationTime, buf.Bytes())
+	data, err := media.MediaService.CreateMedia(ctx, objectId, "image", info.Password, info.ExpirationTime, buf.Bytes())
+	if err != nil {
+		httpHelper.SendError(g, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	httpHelper.SendResponse(g, data)
+}
+
+// @Summary UploadVideo
+// @Tags Media
+// @Accept  mpfd
+// @produce json
+// @Param  Authorization  header  string  false  "Authorization"
+// @Param  video  formData  file  true  "上傳影片"
+// @Param  expirationTime  formData  string  true  "有效時間"
+// @Param  password  formData  string  false  "瀏覽密碼"
+// @Success 200
+// @Router /api/media/video [post]
+func UploadVideo(g *gin.Context) {
+	token := g.Request.Header.Get("Authorization")
+	var objectId string
+	var err error
+	if token != "" {
+		objectId, err = auth.AuthJWT(token)
+		if err != nil {
+			if err == auth.ErrVaild {
+				httpHelper.SendError(g, http.StatusUnauthorized, err.Error())
+				return
+			}
+			httpHelper.SendError(g, http.StatusInternalServerError, model.ErrInternal.Error())
+			return
+		}
+	}
+
+	file, err := g.FormFile("video")
+	if err != nil {
+		httpHelper.SendError(g, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	var buf *bytes.Buffer
+	if file != nil {
+		b, err := fileHelper.ReadFile(file)
+		if err != nil {
+			httpHelper.SendError(g, http.StatusInternalServerError, model.ErrInternal.Error())
+			return
+		}
+		if len(b) == 0 {
+			return
+		}
+		if !fileHelper.IsVideo(http.DetectContentType(b)) {
+			httpHelper.SendError(g, http.StatusBadRequest, "ErrInvalidFileType")
+			return
+		}
+	} else {
+		httpHelper.SendError(g, http.StatusBadRequest, model.ErrParameter.Error())
+		return
+	}
+
+	expirationTime, err := strconv.ParseInt(g.PostForm("expirationTime"), 10, 64)
+	if err != nil {
+		httpHelper.SendError(g, http.StatusInternalServerError, model.ErrInternal.Error())
+		return
+	}
+
+	info := &UploadImageInfo{
+		ExpirationTime: expirationTime,
+		Password:       g.PostForm("password"),
+	}
+
+	validate := validator.New()
+	err = validate.Struct(info)
+	if err != nil {
+		httpHelper.SendError(g, http.StatusBadRequest, model.ErrParameter.Error())
+		return
+	}
+
+	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	defer cancel()
+
+	data, err := media.MediaService.CreateMedia(ctx, objectId, "video", info.Password, info.ExpirationTime, buf.Bytes())
+	if err != nil {
+		httpHelper.SendError(g, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	httpHelper.SendResponse(g, data)
+}
+
+// @Summary GetMedia
+// @Tags Media
+// @Accept  mpfd
+// @produce json
+// @Param  Authorization  header  string  false  "Authorization"
+// @Param  short  path  string  true  "short"
+// @Param  password  query  string  false  "password"
+// @Success 200
+// @Router /api/media/{short} [get]
+func GetMedia(g *gin.Context) {
+	shortUrl := g.Param("short")
+	password := g.Query("password")
+
+	token := g.Request.Header.Get("Authorization")
+	var objectId string
+	var err error
+	if token != "" {
+		objectId, err = auth.AuthJWT(token)
+		if err != nil {
+			if err == auth.ErrVaild {
+				httpHelper.SendError(g, http.StatusUnauthorized, err.Error())
+				return
+			}
+			httpHelper.SendError(g, http.StatusInternalServerError, model.ErrInternal.Error())
+			return
+		}
+	}
+
+	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	defer cancel()
+
+	data, err := media.MediaService.TranslateMedia(ctx, shortUrl, password, objectId)
 	if err != nil {
 		httpHelper.SendError(g, http.StatusBadRequest, err.Error())
 		return
